--- a/_posts/2021-11-20-1115-1121.md
+++ b/_posts/2021-11-20-1115-1121.md
@@ -129,3 +129,37 @@ const solution = (nums, m) => {
 - 그렇기에 돌다리 건너기 문제와 유사한 방식으로 해결했다.
 - 우선 동전 배열에 있는 인덱스에 값을 1로 초기화해줬다.
 - 그리고 dy를 순회하며 해당 인덱스에서 동전 배열에 있는 값만큼 뺀 곳에 위치한 경우의 수를 모두 더해 해당 인덱스에 더해줬다.
+
+<br />
+<br />
+
+## 1118
+
+# 기술 모의 면접 피드백
+
+컨디션이 너무 좋지 않아서 엄청 못봤다고 생각했는데, 생각보다 좋은 결과가 나와서 놀랐다. 다시 한 번 회고를 진행하며 부족했던 점들을 채우고자 한다.
+
+## 좋았던 점
+
+- 모의 면접을 진행할 때 자기소개나 프론트엔드 직무 파악에 대해 좋은 평가를 받는 것 같다. 이 틀을 유지하되 조금 더 메꿔서 말할 수 있도록 해야겠다.
+- SPA의 장점에 대해 원하던 답을 제공한 것 같다. 이 부분은 매력 포인트로 작용할 수 있다고 하니 조금 더 학습하여 온전히 내 것으로 만들어야겠다.
+
+## 부족했던 점이나 아쉬웠던 점
+
+- 프론트엔드 직무에 대해 필요한 능력으로 협업능력과 사용자 관점으로 설명했는데, 기술적인 부분으로 성능을 향상시키는 데에 어필하는 연습도 해야될 것 같다.
+- 모든 프로젝트에서 가장 어려웠던 점이 무엇이었는데, 어떻게 해결했는지를 정리해야 할 필요성을 느꼈다. 그리고 이를 설명할 때 말을 실수해서 다른 의도로 전달되도록 한 것 같은데 가장 좋은 개발은 공식 문서에 나와있는 best practice 대로 하는 것이라고 한다. 공식 문서를 처음부터 끝까지 정독해서 가장 간단한 구조로 구현한 후에 기능을 덧붙여 갔다고 해결방법을 언급해주면 더 좋은 인상을 줄 수 있을 것이라고 한다.
+- 식별자에 대해 질문했을 때에 그에 대해 정확한 답변을 주지 못했다. cs적으로 어떠한 의미인지 용어에 대해 한 번 더 정리해야 할 필요성을 느꼈다.
+- 프로미스에 관련된 질문을 받았는데, 프로미스를 반환하는 함수를 호출한다는 것이 머릿속에서 바로 그려지지 않아 당황한 기억이 있다. 이에 대해 다시 한 번 정리해야 할 필요성을 느꼈다.
+
+## 결론
+
+기본적인 용어 정리를 다시 한 번 하자.  
+자바스크립트 책을 빠르게 한 번 복습하자.  
+프로젝트에 대한 정리를 꼭 하자. 가장 중요한 점은 가장 어려웠던 점을 말하고, 이를 어떻게 해결했는지 과정과 어떤 결과를 냈는지 정리하는 것이다.
+
+### 식별자
+
+- 변수 이름을 식별자라고도 한다. 식별자는 어떤 값을 구별해서 식별할 수 있는 고유한 이름을 말한다.
+- 식별자는 메모리 공간에 저장되어 있는 값을 구별해서 식별해낼 수 있어야 하므로, 어떤 값이 저장되어 있는 **메모리 주소**를 기억해야 한다.
+- 변수, 함수, 클래스 등 메모리 상에 존재하는 어떤 값을 식별할 수 있는 이름은 모두 식별자라고 부른다.
+- 식별자는 네이밍 규칙을 준수해야 하며, 선언에 의해 JS 엔진에 식별자의 존재를 알린다.
