--- a/_posts/2021-11-20-1115-1121.md
+++ b/_posts/2021-11-20-1115-1121.md
@@ -148,7 +148,7 @@ const solution = (nums, m) => {
 
 - 프론트엔드 직무에 대해 필요한 능력으로 협업능력과 사용자 관점으로 설명했는데, 기술적인 부분으로 성능을 향상시키는 데에 어필하는 연습도 해야될 것 같다.
 - 모든 프로젝트에서 가장 어려웠던 점이 무엇이었는데, 어떻게 해결했는지를 정리해야 할 필요성을 느꼈다. 그리고 이를 설명할 때 말을 실수해서 다른 의도로 전달되도록 한 것 같은데 가장 좋은 개발은 공식 문서에 나와있는 best practice 대로 하는 것이라고 한다. 공식 문서를 처음부터 끝까지 정독해서 가장 간단한 구조로 구현한 후에 기능을 덧붙여 갔다고 해결방법을 언급해주면 더 좋은 인상을 줄 수 있을 것이라고 한다.
-- 식별자에 대해 질문했을 때에 그에 대해 정확한 답변을 주지 못했다. cs적으로 어떠한 의미인지 용어에 대해 한 번 더 정리해야 할 필요성을 느꼈다.
+- 식별자에 대해 질문했을 때에 그에 대해 정확한 답변을 주지 못했다. cs적으로 어떠한 의미인지 용어에 대해 한 번 더 정리해야 할 필요성을 느꼈다.
 - 프로미스에 관련된 질문을 받았는데, 프로미스를 반환하는 함수를 호출한다는 것이 머릿속에서 바로 그려지지 않아 당황한 기억이 있다. 이에 대해 다시 한 번 정리해야 할 필요성을 느꼈다.
 
 ## 결론
