--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -93,3 +93,211 @@ const solution = (stones, k) => {
 - 효율성을 검사하는 문제이고 주어진 값이 2억을 넘어가는 것을 보고 이분탐색을 떠올렸다.
 - 확인 함수는 배열에서 특정 값을 뺀 값이 0보다 작거나 같은 횟수가 k번 반복되면 징검다리를 건널 수 없다고 구현하였다.
 - 마지막으로 징검다리를 건널 수 없는 특정 값이 최대로 건널 수 있는 니니즈 친구들 수이다.
+
+<br />
+<br />
+
+## 1123
+
+# FE 성능 최적화
+
+프론트엔드 개발자에게 필요한 능력에는 어떤 것들이 있을까?  
+사용자 관점에서 애플리케이션을 설계하고, 디자이너와 백엔드 개발자 사이에서 일 하기 때문에 커뮤니케이션 능력을 필요로 한다.
+물론 위의 두 가지 능력도 굉장히 중요하지만 기술적인 부분이나 성능 개선을 위한 지식을 보유하고 있는 것도 중요하다고 생각한다.  
+성능 최적화에 관심이 생겨 프론트엔드 개발자가 성능을 최적화하기 위해 적용할 수 있는 기술들에 대해 정리하고 일부 기능은 최근에 진행한 여행 가계부 애플리케이션 'Shall we trip?'에 적용해 보고자 한다.  
+성능 측정은 Lighthouse를 사용했다.
+
+## 페이지 로드 최적화
+
+### 블록 차단 리소스 최적화
+
+HTML을 파싱할 때, CSS나 JavaScript 파일을 만나게 되면 파싱을 멈추고 해당 파일을 파싱하거나 다운로드 후 실행하게 되는데, 이처럼 HTML 파싱을 차단하는 요소를 블록 차단 리소스라고 한다.
+
+- CSS의 경우 `<head>` 태그 안에 임포트해야 하며, `<script>` 태그로 실행되는 js는 일반적으로 `<body>` 맨 하단에 위치시킨다.
+- js 파일은 `defer`나 `async` 어트리뷰트를 이용해서 블로킹을 방지할 수 있다. 다만 `defer`의 경우 IE9 이하에서 문제를 발생시키고, `async`의 경우 DOM 생성 도중 파일을 다운로드 받고 실행까지 시켜서 문제를 발생시킬 수 있으므로 사용에 주의해야 한다.
+
+## CLS 최소화하기
+
+Cumulate Layout Shift는 누적 레이아웃 변화의 약자다. 어떤 페이지에 들어갔을 때 갑작스럽게 발생하는 레이아웃 이동의 정도를 합산 이동 거리라는 개념을 도입해서 만들어낸 지표이다. 늦게 로딩되는 리소스에 의해 레이아웃이 변화하는 현상을 최소화하는 것은 중요하다.
+
+### 레이아웃 변화를 일으키는 요소
+
+- 위치, 사이즈가 지정되어 있지 않은 이미지
+- 위치, 사이즈가 없는 광고나 iframe
+- 동적으로 변화하는 콘텐츠
+- FOUT, FOIT 방식으로 로딩되는 웹폰트
+  - FOUT(Flash of unstyled text) - 웹폰트가 로드되기 전까지 시스템 기본 글꼴을 보여주고, 로드되면 이후 대체
+  - FOIT(Flash of invisible font) - 웹폰트가 로드되기 전까지 텍스트 렌더링을 하지 않다가 이후 렌더링
+- DOM 업데이트 하기 전, 네트워크 응답을 기다리는 작업
+- Layout 변화를 일으키는 CSS 속성들을 사용할 때
+
+### @import에서 link 태그 방식으로 바꾸기
+
+여행 가계부 애플리케이션인 'Shall We Trip'에 CLS를 낮추기 위한 방법은 고민했다.  
+가장 먼저 발견한 것은 폰트와 boxicon이 `@import` 방식으로 css 파일에 들어가 있었다는 것이다.  
+`@import` 방식은 성능을 생각한다면 좋은 방법이 아니다. link 태그는 로딩 시 병렬방식으로 다운로드 하는 반면, `@import` 방식은 직렬 방식으로 다운로드 하기 때문에 로딩시간이 길어지는 문제점이 발생한다.  
+또한 `@import` 방식은 edge 브라우저에서 제대로 동작하지 않는다는 문제점이 존재한다.  
+link 태그는 병렬방식으로 다운로드 하여 로딩속도가 빠르고, 여러개를 link 방식으로 다운로드 하더라도 익스플로러에서 순서가 동일하게 작동한다.
+
+### preload
+
+preload는 선언적 fetch이다. 브라우저에게 페이지에서 필요한 자원을 일찍이 fetch 하라는 지침이다.  
+폰트와 boxicon은 반드시 사용할 자원이기에 preload 속성을 넣어주었다.  
+그리고 폰트를 가져오는 사이트들에 preconnect 속성을 주어 브라우저가 외부의 도메인과 미리 연결을 할 수 있도록 했다.
+
+## 리소스 용량 줄이기
+
+리소스의 용량을 줄임으로써 리소스 다운로드 시간을 최적화할 수 있다.
+
+### JS 용량 최적화
+
+- 트리 쉐이킹
+  - 번들 파일의 불필요한 코드를 제거해주는 것을 말한다. 사용하고자 하는 기능만을 임포트 한다면 파일 용량은 더욱 작아질 것이다.
+- 불필요한 코드는 제거하고 tab size 2를 사용한다.
+- 압축 및 난독화로 용량을 최소화한다.
+  - webpack 4 버전부터 mode를 production으로 설정해 놓으면 알아서 코드를 최적화해준다.
+  - 여러 플러그인들을 기본으로 적용해주는데, 그 중 TerserPlugin은 압축(Minify)과 난독화(Uglify)를 기본적으로 적용해준다.
+
+**압축** - 들여쓰기와 공백이 제거되고, 전체 코드가 한 줄로 병합된다. 원본 코드에서 들여쓰기, 공백, 콤마 등이 제대로 사용되지 않았다면 문제가 발생할 수 있다.  
+**난독화** - JS 코드 자체를 분석하기 어렵게 만드는 과정. 난독화 단계를 높일수록 코드를 해석하고 실행하는 속도가 느려질 수 있다.
+
+### CSS 최적화
+
+- 간결한 선택자 사용
+  - 브라우저는 셀렉터를 오른쪽에서 왼쪽으로 읽기 때문에 자식에서 부모로 거쳐서 올라가게 된다. 그래서 선택자가 복잡해질수록 비용이 많이 발생하게 된다.
+- CSS 파일 압축 - CssMinimizerWebpackPlugin 사용하기
+  - CSS 파일에서도 불필요한 빈칸, 공백 등을 제거해 압축시켜주는 작업을 진행한다.
+
+### 이미지, 미디어 최적화
+
+- 이미지는 png보다 jpg, jpeg의 이미지 크기가 더 작으므로 시각적인 품질 차이가 적다면 jpg, jpeg 확장자를 사용한다.
+- jpg, jpeg 대신 webp를 사용하면 평균 20~30% 정도 크기 감소를 시킬 수 있다. 다만 webp를 지원하지 않는 구버전 브라우저도 있기 때문에 주의해서 사용해야 한다.
+- 애니메이션이 적용된 요소의 경우, gif보다 video 태그로 mp4 파일을 사용하여 적은 용량의 리소스를 요청할 수 있다.
+
+```javascript
+<video src={imageSrc} type="video/mp4" autoPlay muted loop playsInline />
+```
+
+- 위와 같이 작성하면 마치 GIF처럼 보이게 한다.
+
+## 리소스 요청 개수 줄이기
+
+리소스 요청 개수 자체를 줄여서 사용자에게 더 빠르게 페이지를 보여줄 수 있는 성능 최적화이다.
+
+### 이미지 스프라이트
+
+여러 개의 이미지를 하나의 이미지로 합쳐서 관리하는 이미지를 의미한다.  
+웹 페이지에 이미지가 사용될 경우 해당 이미지를 다운받기 위해 브라우저는 서버에 이미지를 요청하게 된다.  
+이미지 스프라이트를 사용하면 여러 이미지를 다운로드 받아도 서버 요청을 줄일 수 있다.  
+-> 로딩 시간 단축
+
+스프라이트 이미지를 다운받아 background-position 속성을 조절하여 여러 이미지를 사용할 수 있다.
+
+### lazy-loading
+
+웹 페이지를 열면 브라우저가 모든 이미지를 읽고 불러와서 렌더링 할 것이다.  
+만약 많은 이미지가 한 페이지에 있다면 그 페이지를 여는 시간도 오래 걸릴 것이고 모바일 환경에서 접속한다면 수많은 데이터를 낭비하게 될 것이다.  
+이러한 상황을 방지하기 위해 스크롤이 하단에 닿았을 때, 동적으로 데이터를 요청하고 화면에 렌더링하도록 구현하였다.  
+이와 같은 방식으로 구현하면 첫 페이지를 불러올 때 로딩 시간도 단축되고, 사용자가 원할 때만 데이터를 불러올 수 있다.
+
+> reference  
+> [FE 성능 최적화](https://coffeeandcakeandnewjeong.tistory.com/34)  
+> [프론트엔드 성능 최적화](https://mingule.tistory.com/66)
+
+<br />
+<br />
+
+## 프로그래머스 카카오 Level3 - 무지의 먹방 라이브
+
+```javascript
+function solution(food_times, k) {
+  food_times.unshift(0);
+  const sT = [...food_times];
+  sT.sort((a, b) => a - b);
+  let rest = sT.length - 1;
+
+  for (let i = 1; i < sT.length; i++) {
+    if (k < rest * (sT[i] - sT[i - 1])) {
+      const len = k % rest;
+      let cnt = 0;
+
+      for (let j = 1; j < food_times.length; j++) {
+        if (food_times[j] >= sT[i]) {
+          if (cnt === len) return j;
+          cnt++;
+        }
+      }
+    } else {
+      k -= rest * (sT[i] - sT[i - 1]);
+      rest--;
+    }
+  }
+  return -1;
+}
+```
+
+- 해설을 여러번 보고 해도 자꾸 틀렸던 아주 어려운 문제.. 주기적으로 다시 풀어봐야겠다.
+- 구현 발상은 어렵지 않다. 효율성을 위해 정렬을 한 뒤 가장 작은 수에 남은 개수를 곱해서 k에서 빼고, k가 그렇게 했을 때 0보다 작아지는 경우 남은 횟수만큼 돌려서 답을 구하는 문제였다.
+- 하지만 발상을 코드로 옮기는 것이 쉽지 않았다. 무턱대고 구현했다가는 코드가 지저분해지고 조금만 꼬여도 어디까지 진행됐는지 알기 힘든 상황이었다.
+- 여기서 몇 가지 기술을 이용했는데, 첫 번째로 배열의 맨 앞에 0을 삽입하여 코드를 작성하기 쉽게 만들었다. 문제 결과 자체도 몇 번째 차례인지 구하는 것이기에 0이 삽입되면 인덱스가 0부터 시작되는 배열 특성상 계산하기 복잡했다.
+- 작은 수부터 계산하기 위해 정렬을 하기 위한 배열과, 원본에서 값을 찾기 위한 배열 총 두 개의 배열을 통해 답을 도출하였다. 정렬을 한 뒤 현재 인덱스 값에서 바로 앞 인덱스 값을 뺀 크기만큼 곱하고, 남은 배열의 길이를 변수로 선언하고 그 값을 반복문이 지날 때마다 하나씩 빼주는 방식을 사용했다.
+
+## Combination Sum
+
+```javascript
+var combinationSum = function (candidates, target) {
+  const answer = [];
+  const tmp = [];
+
+  function DFS(s, sum) {
+    if (sum > target) return;
+    if (sum === target) {
+      answer.push([...tmp]);
+      return;
+    }
+    for (let i = s; i < candidates.length; i++) {
+      tmp.push(candidates[i]);
+      DFS(i, sum + candidates[i]);
+      tmp.pop();
+    }
+  }
+  DFS(0, 0);
+
+  return answer;
+};
+```
+
+- 중복 조합을 구하는 문제
+- 공식을 아느냐 모르냐로 갈릴 것 같은 문제였다
+- 다른 부분은 조합과 똑같으나 재귀 호출을 할 때 i+1로 호출하면 조합, i로 호출하면 중복조합이다
+
+## Combination Sum2
+
+```javascript
+var combinationSum2 = function (candidates, target) {
+  const answer = [];
+  const tmp = [];
+  candidates.sort((a, b) => a - b);
+
+  function DFS(s, sum) {
+    if (sum > target) return;
+    if (sum === target) {
+      answer.push([...tmp]);
+      return;
+    } else {
+      for (let i = s; i < candidates.length; i++) {
+        if (i > s && candidates[i] === candidates[i - 1]) continue;
+        tmp.push(candidates[i]);
+        DFS(i + 1, sum + candidates[i]);
+        tmp.pop();
+      }
+    }
+  }
+  DFS(0, 0);
+
+  return answer;
+};
+```
+
+- 일반 조합을 구하는데, 그 중 중복된 경우는 제거하는 문제
+- i가 s보다 크면서, i번 째에 존재하는 요소와 i-1번 째에 존재하는 요소가 같다면 다음 포문으로 건너 뛴다
