--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -301,3 +301,71 @@ var combinationSum2 = function (candidates, target) {
 
 - 일반 조합을 구하는데, 그 중 중복된 경우는 제거하는 문제
 - i가 s보다 크면서, i번 째에 존재하는 요소와 i-1번 째에 존재하는 요소가 같다면 다음 포문으로 건너 뛴다
+
+<br />
+<br />
+
+## 1124
+
+## 위상 정렬
+
+순서가 정해져있는 작업을 차례로 수행해야 할 때 그 순서를 결정해주기 위해 사용하는 알고리즘
+
+- 위상 정렬은 사이클이 발생하지 않는 방향 그래프에만 적용할 수 있다.
+- 시작점이 존재해야만 사용할 수 있기 때문이다.
+
+### 위상 정렬 알고리즘의 해결책
+
+1. 현재 그래프가 위상 정렬이 가능한지
+2. 위상 정렬이 가능하다면 그 결과는 무엇인지
+
+### 큐를 이용하여 위상 정렬 수행하기
+
+1. 진입 차수가 0인 정점을 큐에 삽입한다.
+2. 큐에서 원소를 꺼내 연결된 모든 간선을 제거한다.
+3. 간선 제거 이후에 진입차수가 0이 된 정점을 큐에 삽입한다.
+4. 큐가 빌 때까지 2~3번 과정을 반복합니다. 모든 원소를 방문하기 전에 큐가 빈다면 사이클이 존재하는 것이고, 모든 원소를 방문했다면 꺼낸 순서가 위상 정렬의 결과입니다.
+
+## 장난감 조립 문제 풀이
+
+```javascript
+function solution(n, relations) {
+  const answer = [];
+  const graph = Array.from(Array(n + 1), () => Array());
+  const indegrees = Array(n + 1).fill(0);
+  const dy = Array.from(Array(n + 1), () => Array(n + 1).fill(0));
+  Q = [];
+  for (let [a, b, c] of relations) {
+    graph[b].push([a, c]);
+    indegrees[a]++;
+  }
+  for (let i = 1; i < n; i++) {
+    if (indegrees[i] === 0) {
+      Q.push(i);
+      dy[i][i] = 1;
+    }
+  }
+
+  while (Q.length) {
+    cur = Q.shift();
+    for (let [next, cnt] of graph[cur]) {
+      for (let i = 1; i < n; i++) {
+        dy[i][next] += dy[i][cur] * cnt;
+      }
+      indegrees[next]--;
+      if (indegrees[next] === 0) Q.push(next);
+    }
+  }
+  for (let i = 1; i < n; i++) {
+    if (dy[i][n] > 0) answer.push([i, dy[i][n]]);
+  }
+  return answer;
+}
+```
+
+- 이번 코딩테스트를 치르며 위상 정렬에 대해 알게 되었다.
+- 장난감을 조립하기 위해서는 중간 부품이 기본 부품 몇 개로 이루어졌는지를 알아야하는데, 중간 부품이 또 다른 중간 부품으로 이루어 질 수 있기 때문에 작업을 순서대로 실행해줘야 했다.
+- 주어진 관계 배열을 순회하며 기본 및 중간 부품을 완성 부품과 그 완성 부품을 이루기 위한 기본 및 중간 부품 개수 배열을 가르키는 그래프를 만들고, 가리킴을 당하는 완성 부품의 진입 차수를 1 증가시켰다.
+- 진입 차수가 0인 부품들을 Q에 삽입하였고, dy[i][j]는 j를 만들기 위해 필요한 i 부품의 개수를 저장하는 배열을 생성하고 초기화했다.
+- Q가 빌 때까지, 큐에서 원소를 꺼내 해당 원소가 가리키는 부품을 순회하며 해당 부품을 만들기 위해 필요한 dy 배열을 하위 부품을 만들기 위해 필요한 부품 \* 개수로 초기화 해줬다.
+- 해당 부품의 진입 차수를 감소시키고, 진입 차수가 0이라면 Q에 삽입하였다.
