--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -369,3 +369,71 @@ function solution(n, relations) {
 - 진입 차수가 0인 부품들을 Q에 삽입하였고, dy[i][j]는 j를 만들기 위해 필요한 i 부품의 개수를 저장하는 배열을 생성하고 초기화했다.
 - Q가 빌 때까지, 큐에서 원소를 꺼내 해당 원소가 가리키는 부품을 순회하며 해당 부품을 만들기 위해 필요한 dy 배열을 하위 부품을 만들기 위해 필요한 부품 \* 개수로 초기화 해줬다.
 - 해당 부품의 진입 차수를 감소시키고, 진입 차수가 0이라면 Q에 삽입하였다.
+
+<br />
+<br />
+
+## 1125
+
+# 리액트 수업 - 1일 차
+
+## 리액트 특징
+
+1. 선언형 - 선언형 방식을 주로 쓰지만, 명령형 방식도 혼합하여 사용한다.
+2. 컴포넌트 기반 - 재사용을 손쉽게 할 수 있다.
+3. 멀티 플랫폼 지원 - 웹 앱, 모바일 네이티브 앱, 데스크톱 앱 등
+
+제일 중요한 주제는 **함수**이다. 함수를 잘 만들면 리액트도 잘 다룰 수 있다.
+
+### 명령형 vs 선언형 프로그래밍 패러다임
+
+명령형(imperative) 프로그래밍은 무언가 **어떻게** 해야 하는지 설명하고,
+반면 선언형(declarative) 프로그래밍은 일부 명령적 구현에 대한 추상을 사용해 원하는 것이 **무엇**인지를 기술한다.
+
+### component driven development
+
+컴포넌트 주도 개발. 컴포넌트를 모듈 단위로 개발하여 UI 구축에 도달하는 개발 및 설계 방법론입니다. 기본적인 컴포넌트 단위부터 시작하여 UI 뷰를 구성하기 위한 점진적 결합 방식의 상향적 성향을 띕니다.
+
+컴포넌트란 상호 교환 가능하고 표준화 된 UI 구성 요소이다. UI 조각의 모양, 기능을 캡슐화한다.
+
+#### CDD 방식의 장점
+
+- 품질 - 독립적으로 컴포넌트를 분리하여 관련 상태를 정의하여 UI가 다양한 시나리오에서 동작하는지 확인 가능하다.
+- 내구성 - 컴포넌트 수준에서 테스트하여 세부 사항까지 버그를 정확하게 찾아낼 수 있다. 테스트보다 작업량이 적다.
+- 속도 - 컴포넌트를 재사용하여 UI를 보다 빠르게 조립할 수 있다.
+- 효율성 - UI를 개별 컴포넌트로 분해한 다음 서로 다른 팀 구성원 간에 공유하여 개발 및 디자인을 병렬 처리한다.
+
+### 멀티 플랫폼 지원
+
+웹 앱, 모바일 네이티브 앱, 데스크톱 앱 등
+
+### 용어
+
+React Hot Loader: 코드가 변경되었을 때 페이지를 새로고침하지 않고 바뀐부분만 빠르게 교체해주는 라이브러리
+CDN(Content delivery network): 웹 콘텐츠를 사용자와 가까운 곳에서 전송함으로써 전송 속도를 높인다.
+실제 리소스를 다운받지 않고 CDN 되어있는 주소를 써보자
+
+## 모듈 다시 내보내기
+
+`export... from...` 문법을 사용하면 가져온 개체를 즉시 '다시 내보내기(re-export)' 할 수 있다. 이름을 바꿔서 다시 내보낼수 있는 것이다.
+
+```javascript
+// 이름으로 내보낸 모듈을 다시 내보낼 때
+export * from "./textFormatting.js";
+
+// 기본으로 내보낸 모듈을 다시 내보낼 때
+export { default as throwError } from "./throwError.js";
+```
+
+### 모듈 다시 내보내기 사용 이유
+
+- 진입점 역할을 하는 주요 파일을 통해 기능을 외부에 노출시키는 경우 외부 개발자가 패키지 안의 파일들을 뒤져 내부 구조를 건드리게 하면 안 된다. 그러려면 공개할 것만 내보내기 하고 나머지는 숨기는 것이 좋다.
+- 이때 내보낼 기능을 패키지 전반에 분산하여 구현한 후, 진입점에서 이 기능들을 가져오고 이를 다시 내보내면 원하는 바를 어느 정도 달성할 수 있다.
+
+### default export 다시 내보내기
+
+기본 내보내기를 다시 내보낼 때는 주의점이 있다.
+
+- `export * from './user.js'`를 사용해 모든 걸 한 번에 다시 내보내면 default export는 무시되고, named export만 다시 내보내진다.
+- 두 가지를 동시에 다시 내보내고 싶다면 두 문을 동시에 사용해야 한다.
+- default export를 다시 내보낼 땐 이런 상황을 인지하고 있다가 처리해줘야 하므로 몇몇 개발자들은 default export를 다시 내보내는 것을 선호하지 않는다.
