--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -437,3 +437,175 @@ export { default as throwError } from "./throwError.js";
 - `export * from './user.js'`를 사용해 모든 걸 한 번에 다시 내보내면 default export는 무시되고, named export만 다시 내보내진다.
 - 두 가지를 동시에 다시 내보내고 싶다면 두 문을 동시에 사용해야 한다.
 - default export를 다시 내보낼 땐 이런 상황을 인지하고 있다가 처리해줘야 하므로 몇몇 개발자들은 default export를 다시 내보내는 것을 선호하지 않는다.
+
+<br />
+<br />
+
+## 1126
+
+# 리액트 수업 - 2일 차
+
+## 실습 환경 설정
+
+### package.json 기본 모듈 타입 module로 변경
+
+서버에서 라이브 서버를 require 방식이 아닌 import 방식으로 받아오기 위해서는 아래와 같이 설정해야 한다.
+
+1. 별다른 설정을 하지 않으면 common.js 방식으로 모듈을 불러오기 때문에 package.json에서 type을 module로 설정한다.
+2. 기본 모듈을 mjs 방식으로 설정하였으므로, server 측 코드를 require이 아닌 import 방식으로 바꾸고 서버의 index.js의 확장자도 mjs로 바꾼다.
+
+### env 설정
+
+live 서버를 실행 시킬 때 process.env에서 저장되어 있는 값을 참조하여 기본 값으로 세팅하려고 하는데, env 파일을 생성하지 않고 npm 스크립트에서 환경변수를 세팅하며 실행 시킬 수 있다.
+
+```json
+"scripts": {
+  "start": "cross-env OPEN='/client/public' npm run dev",
+  "dev": "cross-env PORT=8080 node server/index.mjs",
+}
+```
+
+- 위와 같이 `키=값` 형태로 등록하면 `process.env.키`로 환경변수를 참조 가능하다.
+
+### HTML 파일 메타 태그
+
+```html
+<!-- 인터넷 익스플로러만을 위한 코드 -->
+<!-- 인터넷 익스플로러의 가장 마지막 버전. 11 버전으로 렌더링 해달라는 명령 코드 -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+<!-- 너비를 각각의 디바이스에 맞추라는 코드 -->
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+```
+
+### 서버 파일 수정 시 자동 변경
+
+- nodemon과 node-dev가 있다.
+- 둘다 동작 방식은 비슷한듯 하다
+
+## Test 유틸리티
+
+Jest라는 프레임워크와 비슷한 방식으로 동작하는 유틸리티를 가볍게 구현해보았다.
+
+```javascript
+// tests.js
+import throwError from "./throwError.js";
+
+// 기대(expect) 값을 검토하는 유틸리티
+// 코드 사용 예시)
+// expect(전달값).toBe(기대값)
+// expect(전달값).not.toBe(기대값)
+// expect(전달값).toBeInTheDocument(기대값)
+// expect(전달값).not.toBeInTheDocument(기대값)
+
+export function expect(received) {
+  // 전달 값과 비교할 수 있는 유틸리티 모음 객체 반환
+  return {
+    toBe(expected) {
+      // 전달값과 기대값을 비교해서 같지 않으면 오류 발생
+      if (received !== expected) {
+        throwError(`${received}와 ${expected} 값은 동일하지 않습니다.`);
+      }
+    },
+    toBeTruthy() {
+      if (received !== true) {
+        throwError(`${received} 값은 true가 아닙니다.`);
+      }
+    },
+    toBeFalsy() {
+      if (received !== false) {
+        throwError(`${received} 값은 false가 아닙니다.`);
+      }
+    },
+    toBeInTheDocoument() {
+      if (!document.body.contains(received)) {
+        throwError(`${received}는 문서에 포함되지 않습니다.`);
+      }
+    },
+    toHaveClass(expected) {
+      if (!received.classList.contains(expected)) {
+        throwError(
+          `${received} 요소는 ${expected} 클래스 이름을 포함하지 않습니다.`
+        );
+      }
+    },
+    not: {
+      toBe(expected) {
+        if (received === expected) {
+          throwError(`${received}와 ${expected} 값이 동일합니다.`);
+        }
+      },
+      toBeInTheDocoument() {
+        if (document.body.contains(received)) {
+          throwError(`${received}는 문서에 포함되어 있습니다.`);
+        }
+      },
+    },
+  };
+}
+
+// 테스트(test) 유틸리티
+// 코드 사용 예시)
+// test('1 + 1 = 2', () => expect(1 + 1).not.toBe('12'))
+export function test(description, callback) {
+  // 오류 발생 여부 감지
+  try {
+    callback();
+    console.log(`🟢 테스트 성공: ${description}`);
+  } catch (error) {
+    console.groupCollapsed(`🔴 테스트 실패: ${description}`);
+    console.error(error.message);
+    console.groupEnd();
+  }
+}
+
+// 기술(describe) 유틸리티
+// 코드 사용 예시)
+// describe('테스트 리스트 항목을 대변하는 레이블', () => { test(); test(); ... })
+export function describe(testLabel, callback) {
+  console.group(testLabel);
+  callback();
+  console.groupEnd();
+}
+```
+
+- 야무 강사님이 라이브코딩으로 작성한 이 코드는 내게 큰 충격을 주었다.. 충격을 받은 포인트는 다음과 같다.
+
+1. 클로저의 활용 - 모듈을 사용하지 않았을 때 정보은닉을 하는 용도를 제외하고 클로저를 충분히 활용하지 못했던 것 같다. 하지만 expect 함수는 클로저를 아름답게 활용했다. 전달 값을 자유 변수로 두고, 이 자유변수를 참조하는 메서드들로 구성된 객체를 반환하는 것을 보고 '아 .. 클로저는 이렇게 사용하는 것이구나' 깨닳았다.
+2. 부정 메서드를 중첩 객체를 활용해서 키를 not으로 두고 내부에 메서드를 작성하는 것이 생소하고 신기했다.
+3. 비교 유틸리티에서 원하는 값을 얻지 못하면 throwError 함수로 에러를 호출하였는데, test 함수에서 콜백 내부에 비교 함수를 작성하고 이에 실패했을 때 내부에서 발생시킨 에러를 사용해 try catch로 에러처리하는 것이 정말 깔끔하다고 느끼게 했다.
+
+### console.group 관련 메서드
+
+- console.group
+  console.end 메서드와 함께 사용하면 내부에 있는 콘솔을 그룹핑 해준다.
+- console.groupCollapsed
+  내부에 그룹핑 된 콘솔을 닫은 채로 출력한다. (열 수 있음)
+
+### 사용 예시
+
+```javascript
+import { describe, test, expect } from "../utils/index.js";
+
+const appNode = document.getElementById("app");
+const headlineNode = appNode.querySelector("h1,h2,h3,h4,h5,h6");
+
+describe("DOM 테스트", () => {
+  test('문서의 제목이 "React 앱 개발환경 구성" 인가?', () => {
+    expect(document.title).toBe("React 앱 개발환경 구성");
+  });
+  test("문서에 #app 요소가 존재하는가?", () => {
+    expect(appNode).toBeInTheDocoument();
+  });
+  test("#app 요소 안에 제목 요소가 포함되어 있나?", () => {
+    const hasHeadlineElement = !!appNode.querySelector("h1,h2,h3,h4,h5,h6");
+    expect(hasHeadlineElement).toBeTruthy();
+  });
+  test('제목의 내용은 "React 앱 개발"', () => {
+    expect(headlineNode.textContent).toBe("React 앱 개발");
+  });
+  test("제목 요소는 headline 클래스를 포함하는가?", () => {
+    expect(headlineNode).toHaveClass("headline");
+  });
+});
+```
