--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -609,3 +609,218 @@ describe("DOM 테스트", () => {
   });
 });
 ```
+
+<br />
+<br />
+
+## 1127
+
+# 라인 코딩테스트
+
+## 1번
+
+```javascript
+function solution(record) {
+  const answer = [0, 0];
+  const queue = [];
+  const stack = [];
+
+  for (let i = 0; i < record.length; i++) {
+    const [act, price, cnt] = record[i].split(" ");
+
+    if (act === "S") {
+      for (let j = 0; j < cnt; j++) {
+        answer[0] += queue.shift();
+        answer[1] += stack.pop();
+      }
+    } else {
+      for (let j = 0; j < cnt; j++) {
+        queue.push(+price);
+        stack.push(+price);
+      }
+    }
+  }
+
+  return answer;
+}
+
+console.log(
+  solution(["P 300 6", "P 500 3", "S 1000 4", "P 600 2", "S 1200 1"])
+);
+```
+
+- 물건을 선입선출, 후입선출 방식으로 각각 계산하여 결과를 반환하는 문제이다.
+- 큐와 스택으로 해결하였다.
+
+## 2번
+
+```javascript
+function solution(arr) {
+  let answer = 0;
+  let isDown = false;
+  let lt = 0;
+  let rt = 0;
+
+  for (let i = 1; i < arr.length; i++) {
+    if (arr[i] > arr[i - 1]) {
+      if (isDown) {
+        lt = i - 1;
+        isDown = false;
+      }
+      rt = i;
+    } else if (arr[i] < arr[i - 1]) {
+      isDown = true;
+      answer += rt - lt;
+    } else {
+      lt = i + 1;
+      rt = i + 1;
+    }
+  }
+
+  return answer % (10 ** 9 + 7);
+}
+
+console.log(solution([0, 1, 2, 5, 3, 7]));
+```
+
+- 연속되는 바이토닉 수열의 개수를 구하는 문제였다.
+- 투포인터로 해결하였고, 두 수를 비교해서 클 때, 작을 때, 같을 때로 구분하여 처리하였다.
+- 같은 경우 이전까지의 수에서는 바이토닉 수열을 구할 수 없으므로 초기화했다.
+- 현재 인덱스 값이 이전 인덱스 값보다 작은경우 현재 인덱스 까지의 바이토닉 수열 개수를 구해서 정답에 더했다.
+- 핵심은 현재 인덱스 값이 증가하는 경우의 위치를 계속해서 저장해두는 것이었다.
+
+## 3번
+
+```javascript
+function solution(n, k) {
+  const queue = [];
+  const dx = [-1, 0, 1, 0];
+  const dy = [0, 1, 0, -1];
+  const dist = Array.from(Array(n + 1), () =>
+    Array(n + 1).fill(Number.MAX_SAFE_INTEGER)
+  );
+
+  function getMax() {
+    let coor = [];
+    let max = 0;
+
+    for (let i = 1; i <= n; i++) {
+      for (let j = 1; j <= n; j++) {
+        if (
+          dist[i][j] > max ||
+          (coor.length && dist[i][j] === max && j < coor[1])
+        ) {
+          max = dist[i][j];
+          coor = [i, j];
+        }
+      }
+    }
+    return coor;
+  }
+
+  function BFS() {
+    while (queue.length) {
+      const [x, y] = queue.shift();
+
+      for (let i = 0; i < 4; i++) {
+        const nx = x + dx[i];
+        const ny = y + dy[i];
+
+        if (nx > 0 && nx <= n && ny > 0 && ny <= n) {
+          if (dist[x][y] + 1 < dist[nx][ny]) {
+            dist[nx][ny] = dist[x][y] + 1;
+            queue.push([nx, ny]);
+          }
+        }
+      }
+    }
+  }
+
+  dist[1][1] = 0;
+  queue.push([1, 1]);
+  BFS();
+
+  for (let i = 2; i < k; i++) {
+    const [x, y] = getMax();
+    dist[x][y] = 0;
+    queue.push([x, y]);
+    BFS();
+  }
+
+  return getMax();
+}
+```
+
+- BFS에서는 현재 queue에 저장되어 있는 좌표를 기준으로 모든 좌표의 최대 거리를 계산하여 입력하도록 했다.
+- 가장 거리가 멀면서 열의 값이 작은 좌표를 반환하는 getMax()함수를 작성하고, 이를 k-1번 반복한 뒤 getMax()를 반환하면 k 번째 들어오는 사람의 좌표 위치를 구할 수 있었다.
+
+## 4번
+
+```javascript
+function solution(rectangles) {
+  const answer = [];
+  const tmp = [];
+  const arr = rectangles
+    .map((v, i) => [i, v])
+    .sort((a, b) => a[1][1] - b[1][1]);
+  const dy = Array(1000001).fill(0);
+  const dx = Array(1000001).fill(0);
+
+  for (let i = 0; i < arr.length; i++) {
+    const [x1, y1, x2, y2] = arr[i][1];
+    const height = y2 - y1;
+
+    let baseY = 0;
+    for (let j = x1; j < x2; j++) {
+      baseY = Math.max(baseY, dy[j]);
+    }
+
+    for (let j = x1; j < x2; j++) {
+      dy[j] = baseY + height;
+    }
+
+    tmp.push([arr[i][0], [x1, baseY, x2, baseY + height]]);
+  }
+
+  tmp.sort((a, b) => a[1][0] - b[1][0]);
+
+  for (let i = 0; i < tmp.length; i++) {
+    const [x1, y1, x2, y2] = tmp[i][1];
+    const width = x2 - x1;
+
+    let baseX = 0;
+    for (let j = y1; j < y2; j++) {
+      baseX = Math.max(baseX, dx[j]);
+    }
+
+    for (let j = y1; j < y2; j++) {
+      dx[j] = baseX + width;
+    }
+
+    answer.push([tmp[i][0], [baseX, y1, baseX + width, y2]]);
+  }
+
+  return answer.sort((a, b) => a[0] - b[0]).map((v) => v[1].join(" "));
+}
+
+console.log(
+  solution([
+    [0, 2, 1, 3],
+    [1, 2, 2, 5],
+    [3, 3, 4, 4],
+    [4, 1, 6, 3],
+    [1, 6, 5, 7],
+    [5, 5, 7, 6],
+    [5, 8, 6, 10],
+  ])
+);
+```
+
+- 위에서 내려오는 도형을 계산하는 것과 오른쪽에서 왼쪽으로 미는 로직을 철저히 분리하여 구현하였다.
+- 핵심은 현재까지 바닥이나 왼쪽에서부터 쌓여있는 높이를 저장해두는 것이었다.
+
+## 총평
+
+난이도도 내가 느끼기에는 적절했고, 테스트 케이스가 모두 알 수 없다보니 정답을 맞은지는 모르겠지만 끝까지 다 풀었다는 점에서 뿌듯하다.  
+이제는 공채 코딩테스트도 어느정도 도전해볼만 하다는 생각이 든다.  
+결과가 어떻게 나올지는 모르겠고, 경력직을 뽑는 과정이다보니 코딩테스트가 조금 쉽게 나왔을 수도 있지만 그래도 만족스러운 결과를 얻은 것 같다.
