--- a/_posts/2021-11-25-1122-1128.md
+++ b/_posts/2021-11-25-1122-1128.md
@@ -824,3 +824,25 @@ console.log(
 난이도도 내가 느끼기에는 적절했고, 테스트 케이스가 모두 알 수 없다보니 정답을 맞은지는 모르겠지만 끝까지 다 풀었다는 점에서 뿌듯하다.  
 이제는 공채 코딩테스트도 어느정도 도전해볼만 하다는 생각이 든다.  
 결과가 어떻게 나올지는 모르겠고, 경력직을 뽑는 과정이다보니 코딩테스트가 조금 쉽게 나왔을 수도 있지만 그래도 만족스러운 결과를 얻은 것 같다.
+
+<br />
+<br />
+
+## 1128
+
+# 우테코 프리코스 1주차
+
+우아한 테크코스 1차를 합격하고 프리코스 주간이 시작되었다.  
+자바스크립트 연습도 할 겸 도움이 될 것 같다고 판단하여 진행하기로 결정했다.
+
+미션은 기능 요구사항, 프로그래밍 요구사항, 과제 진행 요구사항 세 가지로 구성되어 있었다.  
+기능 단위로 커밋을 하는 연습을 하려고 했다.
+
+1주차 과제는 이전 우테코 과정과 똑같은 야구 게임이었다. 하지만 처음 접하여 요구사항을 지키면서 하려다보니 생각보다 시간이 걸렸다.  
+1주차라 난이도는 쉬웠지만, 그 속에서도 배운점이 있었다. 2, 3주차 때도 시간을 아껴서 도전해볼만한 가치가 있다는 생각이 들었다.
+
+## 느낀 점
+
+기존에도 클린코드나 폴더 구조화에 관심이 많아 신경쓰며 코딩을 진행했지만 이렇게 규칙을 제대로 정해놓고 한 적은 처음이라 좋은 경험이었습니다. 함수 내부 로직을 15줄 이내로 맞추려다보니 자연스럽게 함수가 수행하는 일이 줄어들었고, 다 구현해놓고 보니 생각보다 더 깔끔하게 구조가 잡힌 것 같아 이러한 코딩 컨벤션의 중요성을 다시금 깨닫게 되는 순간이었습니다.
+
+원래부터 커밋 로그를 남길 때 prefix를 달거나 제목을 명사 형식으로 작성하며 진행했지만, 정작 프로젝트를 진행하다보면 기능별로 커밋을 남기기가 쉽지 않고 커밋 메세지 body 부분을 작성하는 것을 소홀히 했던 것 같습니다. 하지만 이번에 이런 부분들을 이전보다 신경쓰며 진행하다 보니 확실히 기록 로그가 깔끔하게 남는다는 것을 몸소 체험했습니다.
