--- a/_posts/2021-11-30-1129-1205.md
+++ b/_posts/2021-11-30-1129-1205.md
@@ -321,3 +321,78 @@ React는 소문자로 시작하는 컴포넌트를 DOM 태그로 처리한다.
 
 **reference**  
 [React – 사용자 인터페이스를 만들기 위한 JavaScript 라이브러리](https://ko.reactjs.org/)
+
+<br />
+<br />
+
+## 1130
+
+## 4 Sum
+
+```javascript
+var fourSum = function (nums, target) {
+  const answer = [];
+  const len = nums.length;
+
+  nums.sort((a, b) => a - b);
+  for (let i = 0; i < len - 3; i++) {
+    for (let j = i + 1; j < len - 2; j++) {
+      let lt = j + 1;
+      let rt = len - 1;
+
+      while (lt < rt) {
+        let sum = nums[i] + nums[j] + nums[lt] + nums[rt];
+
+        if (sum === target) {
+          answer.push([nums[i], nums[j], nums[lt], nums[rt]]);
+          while (nums[lt] === nums[lt + 1]) lt++;
+          while (nums[rt] === nums[rt - 1]) rt--;
+          lt++;
+          rt--;
+        } else if (sum < target) {
+          lt++;
+        } else {
+          rt--;
+        }
+      }
+      while (nums[j] === nums[j + 1]) j++;
+    }
+    while (nums[i] === nums[i + 1]) i++;
+  }
+
+  return answer;
+};
+```
+
+- 예전에 풀었던 3Sum 문제와 상당히 유사한 문제였다.
+- 두 개의 for 문을 돌면서 내부의 lt, rt를 조절하여 문제를 해결하였다.
+- 문제를 풀다보니 이전에 풀었던 문제가 생각보다 많이 헷갈린다는 생각이 들어서 복습 위주로 문제를 풀어봐야겠다고 느꼈다.
+
+## Count Binary Substrings
+
+```javascript
+var countBinarySubstrings = function (s) {
+  s += " ";
+  let answer = 0;
+  let prev = 0;
+  let cur = 1;
+
+  for (let i = 1; i < s.length; i++) {
+    if (s[i] === s[i - 1]) {
+      cur++;
+    } else {
+      answer += Math.min(prev, cur);
+      prev = cur;
+      cur = 1;
+    }
+  }
+
+  return answer;
+};
+```
+
+- 연속되는 부분 문자열 중, 0과 1의 숫자가 같은 개수를 구하는 문제였다. 단, 0과 1은 연속되어야 한다.
+- 인덱스를 1부터 끝까지 순회하며 이전과 비교해서 같을 때 다를 때로 구분하였다.
+- 같을 때는 cur 변수를 증가시켜 몇 번 연속 중인지를 나타냈고, 다른 경우 새로운 수가 시작하므로 이전 연속된 수와 비교해서 더 작은만큼 정답에 더해줬다.
+- 그리고 이전 변수에 현재 변수의 값을 저장하고 cur을 1로 초기화했다.
+- 여기서 마지막에 같은 경우를 대비해 문자열 마지막에 빈 문자열을 집어넣어 코딩했다.
