--- a/_posts/2021-11-30-1129-1205.md
+++ b/_posts/2021-11-30-1129-1205.md
@@ -396,3 +396,89 @@ var countBinarySubstrings = function (s) {
 - 같을 때는 cur 변수를 증가시켜 몇 번 연속 중인지를 나타냈고, 다른 경우 새로운 수가 시작하므로 이전 연속된 수와 비교해서 더 작은만큼 정답에 더해줬다.
 - 그리고 이전 변수에 현재 변수의 값을 저장하고 cur을 1로 초기화했다.
 - 여기서 마지막에 같은 경우를 대비해 문자열 마지막에 빈 문자열을 집어넣어 코딩했다.
+
+## 1201
+
+# 모의 코딩테스트 회고
+
+코딩 테스트를 진행하며 모든 문제를 맞추긴 했지만, 문제가 애매하게 나온 문제도 있었고 강사님의 코드를 보고 이해하면 좋을 것 같다는 생각이 들어 글을 작성하게 되었다.
+
+## 주사위 쌓기
+
+```javascript
+function solution(dice) {
+  let opp = [5, 3, 4, 1, 2, 0];
+  let answer = 0;
+  for (let i = 0; i < 6; i++) {
+    let start = dice[0][i];
+    let sum = 0,
+      maxN = 0;
+    for (let j = 0; j < dice.length; j++) {
+      let side = dice[j].indexOf(start);
+      let op = opp[side];
+      let end = dice[j][op];
+      if (start !== 6 && end !== 6) maxN = 6;
+      else if (start != 5 && end !== 5) maxN = 5;
+      else maxN = 4;
+      sum += maxN;
+      start = end;
+    }
+    answer = Math.max(answer, sum);
+  }
+  return answer;
+}
+```
+
+- 내 로직과 큰 다른점은 나는 맵을 이용해 인덱스의 반대편 인덱스를 구했지만, 강사님 코드는 배열의 기본 인덱스를 활용했다는 점이다.
+- 이 외 로직은 전반적으로 비슷했다. 현재 시작면 숫자와, 반대편 숫자를 계속 갱신해나가며 문제를 해결했다.
+
+## 안전 영역
+
+```javascript
+function solution(board) {
+  let answer = 0;
+  const len = board.length;
+  const dx = [-1, 0, 1, 0];
+  const dy = [0, 1, 0, -1];
+  let ch;
+
+  function DFS(x, y, k) {
+    ch[x][y] = 1;
+    for (let i = 0; i < 4; i++) {
+      const nx = x + dx[i];
+      const ny = y + dy[i];
+      if (
+        nx >= 0 &&
+        nx < len &&
+        ny >= 0 &&
+        ny < len &&
+        ch[nx][ny] === 0 &&
+        board[nx][ny] > k
+      ) {
+        ch[nx][ny] = 1;
+        DFS(nx, ny, k);
+      }
+    }
+  }
+  for (let k = 0; k < 100; k++) {
+    ch = Array.from(Array(len), () => Array(len).fill(0));
+    let cnt = 0;
+    for (let i = 0; i < len; i++) {
+      for (let j = 0; j < len; j++) {
+        if (ch[i][j] === 0 && board[i][j] > k) {
+          cnt++;
+          DFS(i, j, k);
+        }
+      }
+    }
+    answer = Math.max(answer, cnt);
+    if (cnt === 0) break;
+  }
+
+  return answer;
+}
+```
+
+- 섬나라 아일랜드 문제와 비슷한 DFS 문제였다.
+- 높이가 총 100까지 존재하므로 100번까지 순회하면서 안전지역을 만날 때마다 카운트를 증가시키고 주변 안전지역을 체크하였다.
+- 모든 구간이 안전지역이 존재하지 않는 경우 반복문을 종료한다.
