--- a/_posts/2021-11-30-1129-1205.md
+++ b/_posts/2021-11-30-1129-1205.md
@@ -482,3 +482,234 @@ function solution(board) {
 - 섬나라 아일랜드 문제와 비슷한 DFS 문제였다.
 - 높이가 총 100까지 존재하므로 100번까지 순회하면서 안전지역을 만날 때마다 카운트를 증가시키고 주변 안전지역을 체크하였다.
 - 모든 구간이 안전지역이 존재하지 않는 경우 반복문을 종료한다.
+
+## 결혼식
+
+```javascript
+function solution(times) {
+  let answer = 0;
+  let cnt = 0;
+  const T_line = [];
+
+  times.forEach((time) => {
+    T_line.push([time[0], "s"]);
+    T_line.push([time[1], "e"]);
+  });
+  T_line.sort((a, b) =>
+    a[0] > b[0] ? 1 : a[0] < b[0] ? -1 : a[1] > b[1] ? 1 : a[1] < b[1] ? -1 : 0
+  );
+
+  T_line.forEach((v) => {
+    if (v[1] === "s") cnt++;
+    else cnt--;
+    answer = Math.max(answer, cnt);
+  });
+
+  return answer;
+}
+```
+
+- T_line에는 들어온 시간과 나간 시간을 문자열로 표기하여 배열을 삽입한다.
+- T_line을 시간별로 오름차순, 시간이 같다면 나간 사람 먼저 빼고 해당 시간대 별 최대 인원 수를 구한다.
+- 여기서 주의할 점은 나간 사람을 먼저 빼고 인원을 구해야 한다. 그렇지 않으면 해당 시간에 나가는 인원은 제외하고 구해야 하는데 포함해서 구하게 된다.
+- 이 방법으로 해결하면 O(n)으로 문제를 해결할 수 있다.
+
+## 삼각형 돌리기
+
+```javascript
+function solution(grid, clockwise) {
+  const answer = [];
+  const n = grid.length;
+
+  if (clockwise) {
+    for (let i = 0; i < n; i++) {
+      let line = "";
+      for (let j = 0; j <= i * 2; j++) {
+        line += grid[n - 1 - Math.floor(j / 2)][i * 2 - j];
+      }
+      answer.push(line);
+    }
+  } else {
+    for (let i = 0; i < n; i++) {
+      let line = "";
+      for (let j = 0; j <= i * 2; j++) {
+        line +=
+          grid[n - 1 - i + Math.floor((j + 1) / 2)][
+            n * 2 - 2 - i * 2 + (j % 2)
+          ];
+      }
+      answer.push(line);
+    }
+  }
+  return answer;
+}
+```
+
+- 우테코에 출제되었던 7번 문제
+- 거의 내 코드의 절반의 길이를 이용해서 문제를 해결할 수 있었다.
+- 핵심은 line에 더하는 값을 한 줄로 해결하는 것. 인덱스를 잘 활용해야 한다.
+
+## 1202
+
+# 리액트 수업 4일 차
+
+## Babel
+
+### babel polyfill
+
+Array.prototype.find 메서드나 Promise는 IE에서 지원하지 않는다. 이를 하위 브라우저에서 사용하기 위해서는 babel-polyfill이 필요하다.
+
+- babel-polyfill이 아닌 core-js를 사용하기를 babel 공식 사이트에서는 권장하고 있다.
+- core-js와 regenerator-runtime를 함께 사용해야 한다.
+
+### babel standalone의 문제점
+
+- 코드를 모듈화하면 JSX를 해석하지 못한다
+  - 스크립트 type을 module로 지정하면 babel standalone이 무엇을 컴파일해야 할 지 모른다.
+  - data-type으로 module을 지정해도 babel이 기본적으로 commonjs 방식으로 컴파일하기 때문에 require 문법을 브라우저가 이해하지 못해 오류가 발생한다.
+  - .babelrc 파일에서 presets 부분에 modules를 false로 지정하여 바벨이 모듈은 컴파일 하지 않도록 한다.
+
+```javascript
+"presets": [
+  [
+    "@babel/preset-env",
+    {
+      "modules": false
+    }
+  ]
+],
+```
+
+- 이렇게까지 해도 결국 경로 문제가 발생한다.
+- babel standalone은 하나의 파일만 컴파일할 수 있어서 문제가 있다.
+  - babel로 컴파일링 되면 어떻게 변환되는지 보여주는 사이트에서 적합
+
+### babel/cli
+
+- 결론은 babel/cli 를 사용하는 것이 더 낫다.
+- babel/cli는 폴더를 폴더로 컴파일한다.
+- 추가로 preset과 plugin-transform-react-jsx라는 플러그인을 함께 설치해줘야지만 바벨이 JSX를 해석할 수 있다.
+- html에서 컴파일 된 폴더를 로드해서 사용해야 한다.
+- 바벨은 컴파일러지 모듈 번들러는 아니기에 추후에 웹팩을 사용할 때는 다른 방식으로 사용해야한다.
+- rimraf는 지우기 귀찮으니 커맨드 하나로 컴파일 된 폴더를 지울 수 있게 해준다. rm -rf 명령어는 맥에서만 되기에 크로스 브라우징을 위해서 설치
+
+### eslint 커맨드라인 vs 스토어 설치
+
+- 어찌보면 기본적인 것인데 순간 헷갈려 질문했다.
+- npm으로 설치한 것은 **실행해야 동작**, 스토어에서 설치하여 실행 시 기본 관찰. 이때 .eslintrc 파일을 자동으로 확인하여 실행한다.
+
+### 사진 포맷 확장자 선택 기준
+
+- 맥의 레티나 디스플레이를 위해 2배수 이미지도 고려해야 한다.
+- 일반 사진은 JPG
+- 심플한 모양의 사진은 svg
+- 투명도가 필요한 사진은 png
+
+### defaultProps
+
+- React 모든 컴포넌트(함수, 클래스)는 props의 기본 값을 .defaultProps로 설정한다.
+
+```javascript
+Logo.defaultProps = {
+  textColor: "#242CF8",
+  dotColor: "#FF6B00",
+  label: "MORE.",
+  size: ratio.height,
+};
+```
+
+## Virtual DOM
+
+실제 DOM에 직접 조작하는 것이 아니라, 변경 요청이 발생할 때 가상 DOM의 이전/이후 구조를 비교해 변경 된 부분만 실제 DOM에 업데이트한다. 실제 DOM을 조작하지 않아 UI 반응 속도를 높일 수 있다.
+
+- 잦은 DOM 조작은 비용이 많이 들고 속도가 느려진다.
+- React는 가상 DOM을 사용하여 성능을 향상시키는 방식을 채택했다.
+- 가상 DOM 컴포넌트를 지속적으로 관찰하여 상태 변경을 감지하려 시도한다.
+- 가상 DOM 이전, 이후 비교는 재조정 알고리즘을 사용하여 효율적으로 처리한다.
+- 비교 결과 차이가 발생하면 실제 DOM에 반영해 UI를 업데이트 한다.
+
+### Virtual DOM 트리 추상화
+
+**가상 돔은 실제 돔 구조를 추상화한 표현**  
+예를 들어 HTML 문서 구조를 가상 DOM으로 표현한다는 것은 JS 객체로 구현할 수 있다.
+
+```html
+<ul class="what-is-virtual-dom">
+  <li>가상 DOM은 실제 DOM을 추상화 하여 표현한 것을 말합니다.</li>
+  <li>가상 DOM 트리에서 무언가 변경되면 새로운 가상 DOM 트리가 생성됩니다.</li>
+</ul>
+```
+
+```javascript
+{
+  type: 'ul',
+  props: { className: 'what-is-virtual-dom' },
+  children: [
+    {
+      type: 'li',
+      props: null,
+      children: '가상 DOM은 실제 DOM을 추상화 하여 표현한 것을 말합니다.'
+    },
+    {
+      type: 'li',
+      props: null,
+      children: '가상 DOM 트리에서 무언가 변경되면 새로운 가상 DOM 트리가 생성됩니다.'
+    },
+  ]
+}
+```
+
+### hyperscript 모듈
+
+DOM 구조가 복잡해질수록 Virtual DOM 구조 또한 복잡해진다. 가상 DOM 구조를 손쉽게 생성할 수 있도록 h 함수를 작성한다.
+
+```javascript
+function h(type, props = {}, ...children) {
+  return { type, props, children };
+}
+```
+
+### JSX 프라그마
+
+- React는 가상 돔을 보다 이해하기 쉽고, 사용하기 편리하도록 JSX를 사용한다. JSX 문법은 Babel과 같은 컴파일러를 통해 가상 DOM을 생성하는 함수(React.createElement) 코드로 변경된다.
+- @babel/plugin-transform-react-jsx 플러그인을 사용하면 JSX 문법을 특정 함수로 처리하여 컴파일 할 수 있다.
+- 예를 들어 가상 돔을 생성하는 h() 함수를 JSX 문법을 해석하는 함수로 설정할 수 있다.
+- 컴파일러에 지시하는 것을 뜻하는 @jsx 프라그마를 사용하여 JSX 문법을 해석해 특정 함수로 변경하도록 설정한다.
+
+```javascript
+/** @jsx h */
+// JSX 문법을 h 함수로 해석하라는 지시
+```
+
+### createElement 모듈
+
+- 가상 돔 트리 구조를 해석해 실제 돔을 생성하는 모듈을 작성
+
+```javascript
+function createElement(vNode) {
+  // vNode 타입이 문자 값이라면
+  if (typeof vNode === "string") {
+    // 텍스트 노드를 생성해 반환
+    return document.createTextNode(vNode);
+  }
+
+  // vNode.type에 해당되는 요소 노드를 생성 (예: 'div')
+  const elementNode = document.createElement(vNode.type);
+
+  // props 객체의 모든 필드를 반복해 설정
+  setProps(elementNode, vNode.props);
+  // 이벤트 바인딩
+  bindEvents(elementNode, vNode.props);
+
+  // vNode.children 순환
+  vNode.children
+    // 포함하는 vChildNode를 createElement()를 사용해 노드 생성 (재귀 호출)
+    .map((vChildNode) => createElement(vChildNode))
+    // DOM 노드 집합을 순환
+    // 개별 자식 DOM 노드를 루트 노드의 마지막 자식 노드로 삽입
+    .forEach((childNode) => elementNode.appendChild(childNode));
+
+  // DOM 요소 노드 반환
+  return elementNode;
+}
+```
