--- a/_posts/2021-11-30-1129-1205.md
+++ b/_posts/2021-11-30-1129-1205.md
@@ -549,6 +549,9 @@ function solution(grid, clockwise) {
 - 거의 내 코드의 절반의 길이를 이용해서 문제를 해결할 수 있었다.
 - 핵심은 line에 더하는 값을 한 줄로 해결하는 것. 인덱스를 잘 활용해야 한다.
 
+<br />
+<br />
+
 ## 1202
 
 # 리액트 수업 4일 차
@@ -713,3 +716,59 @@ function createElement(vNode) {
   return elementNode;
 }
 ```
+
+<br />
+<br />
+
+## 1203
+
+# 투포인터 문제 풀이
+
+## Minimum Size Subarray Sum
+
+```javascript
+var minSubArrayLen = function (target, nums) {
+  let answer = nums.length + 1;
+  let sum = 0;
+  let lt = 0;
+
+  for (let rt = 0; rt < nums.length; rt++) {
+    sum += nums[rt];
+
+    while (sum >= target) {
+      answer = Math.min(answer, rt - lt + 1);
+      sum -= nums[lt++];
+    }
+  }
+  return answer === nums.length + 1 ? 0 : answer;
+};
+```
+
+- 연속되는 배열의 합이 target보다 크거나 같다는 조건을 충족할 때, 배열의 최소 길이를 구하는 문제
+- 워낙 많이 풀어 본 유형의 문제라 수월하게 해결했다.
+
+## Arithmetic Slices
+
+```javascript
+var numberOfArithmeticSlices = function (nums) {
+  let answer = 0;
+  let lt = 0;
+  let tmp;
+
+  for (let rt = 1; rt < nums.length; rt++) {
+    if (nums[rt] - nums[rt - 1] === tmp) {
+      if (rt - lt + 1 >= 3) {
+        answer += rt - lt - 1;
+      }
+    } else {
+      tmp = nums[rt] - nums[rt - 1];
+      lt = rt - 1;
+    }
+  }
+
+  return answer;
+};
+```
+
+- 등차 수열을 개수를 구하는 문제
+- 등차 수열은 변수에 저장해 둔 값이랑 앞 뒤 차가 다르면 깨지게 되므로, 깨지면 다시 시작하고 그렇지 않다면 해당 인덱스에서 구할 수 있는 등차수열 개수를 정답에 더해 반환했다.
