--- a/_posts/2021-11-30-1129-1205.md
+++ b/_posts/2021-11-30-1129-1205.md
@@ -772,3 +772,14 @@ var numberOfArithmeticSlices = function (nums) {
 
 - 등차 수열을 개수를 구하는 문제
 - 등차 수열은 변수에 저장해 둔 값이랑 앞 뒤 차가 다르면 깨지게 되므로, 깨지면 다시 시작하고 그렇지 않다면 해당 인덱스에서 구할 수 있는 등차수열 개수를 정답에 더해 반환했다.
+
+## 1205
+
+# 우테코 프리코스 2주차
+
+1주차 과제와 전반적으로 비슷했지만 다른 점이 있다면 DOM API에 대해 리마인드 할 수 있는 시간이었다.
+appendChild나 createElement 같은 메서드를 사용하며 이전에 공부했던 내용을 다시 한 번 복습할 수 있었다.
+
+기존에는 클래스 패턴보다는 생성자 함수 패턴을 사용해서 코드를 작성했는데, 과제를 진행하면서는 많이 사용해보지 않은 패턴을 적용해보자고 생각하여 클래스 패턴을 이용하려고 노력했다.
+
+화면에 개행을 하는 부분에서 시간을 가장 많이 투자했다. join을 실행할 때 이스케이프 처리를 해주면 바로 적용이 될 줄 알았는데, 예상과는 다르게 동작하지 않았습니다. 때문에 `<br />`을 삽입하여 문제를 해결했다. 총 시간은 3시간 정도 걸린 것 같다.
